@@ -1,9 +1,11 @@
-/* Register definitions for pic16f886.
+/* Register definitions for pic16f887.
  * This file was automatically generated by:
  *   inc2h.pl V4585
  *   Copyright (c) 2002, Kevin L. Pauba, All Rights Reserved
+ *
+ * Rename this file if your gputils in fact support this device.
  */
-#include <pic16f886.h>
+#include <pic16f887.h>
 
 __data __at (INDF_ADDR) volatile char      INDF;
 __sfr  __at (TMR0_ADDR)                    TMR0;
@@ -13,6 +15,7 @@ __sfr  __at (FSR_ADDR)                     FSR;
 __sfr  __at (PORTA_ADDR)                   PORTA;
 __sfr  __at (PORTB_ADDR)                   PORTB;
 __sfr  __at (PORTC_ADDR)                   PORTC;
+__sfr  __at (PORTD_ADDR)                   PORTD;
 __sfr  __at (PORTE_ADDR)                   PORTE;
 __sfr  __at (PCLATH_ADDR)                  PCLATH;
 __sfr  __at (INTCON_ADDR)                  INTCON;
@@ -40,6 +43,7 @@ __sfr  __at (OPTION_REG_ADDR)              OPTION_REG;
 __sfr  __at (TRISA_ADDR)                   TRISA;
 __sfr  __at (TRISB_ADDR)                   TRISB;
 __sfr  __at (TRISC_ADDR)                   TRISC;
+__sfr  __at (TRISD_ADDR)                   TRISD;
 __sfr  __at (TRISE_ADDR)                   TRISE;
 __sfr  __at (PIE1_ADDR)                    PIE1;
 __sfr  __at (PIE2_ADDR)                    PIE2;
@@ -104,6 +108,7 @@ volatile __PIR2_bits_t __at(PIR2_ADDR) PIR2_bits;
 volatile __PORTA_bits_t __at(PORTA_ADDR) PORTA_bits;
 volatile __PORTB_bits_t __at(PORTB_ADDR) PORTB_bits;
 volatile __PORTC_bits_t __at(PORTC_ADDR) PORTC_bits;
+volatile __PORTD_bits_t __at(PORTD_ADDR) PORTD_bits;
 volatile __PORTE_bits_t __at(PORTE_ADDR) PORTE_bits;
 volatile __PSTRCON_bits_t __at(PSTRCON_ADDR) PSTRCON_bits;
 volatile __PWM1CON_bits_t __at(PWM1CON_ADDR) PWM1CON_bits;
@@ -120,6 +125,7 @@ volatile __T2CON_bits_t __at(T2CON_ADDR) T2CON_bits;
 volatile __TRISA_bits_t __at(TRISA_ADDR) TRISA_bits;
 volatile __TRISB_bits_t __at(TRISB_ADDR) TRISB_bits;
 volatile __TRISC_bits_t __at(TRISC_ADDR) TRISC_bits;
+volatile __TRISD_bits_t __at(TRISD_ADDR) TRISD_bits;
 volatile __TRISE_bits_t __at(TRISE_ADDR) TRISE_bits;
 volatile __TXSTA_bits_t __at(TXSTA_ADDR) TXSTA_bits;
 volatile __VRCON_bits_t __at(VRCON_ADDR) VRCON_bits;
